--- a/task2/index.html
+++ b/task2/index.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 	</header>
-	<section id="body">
+	<main>
 		<div class="conteiner">
 		<div class="VS grey">
 			<p>Video Spotlight</p>
@@ -145,6 +145,6 @@
 			</div>
 		</div>
 	</div>	
-	</section>
+	</main>
 </body>
 </html>
